<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cincy Food Trucks</string>
    <string name="app_id">662026153876150</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="CFTA">Welcome to the Cincinnati Food Truck Association</string>
    <string name="strTest">Test</string>
    <string name="strRefresh">Refresh Map</string>
    <string name="strBack">Back</string>
    <string name="strContact">Contact</string>
    <string name="rateBtn">Rate Us</string>
    <string name="strLogin">Login</string>
    <string name="strMenu">Menu</string>
    <string name="strRate">Rate Us</string>
    <string name="strRateUs">Rating</string>
    <string name="strEmail">E-Mail</string>
    <string name="strReply">Check here if you would like a reply</string>
    <string name="strEmailSub">Check here to subscribe to our e
mail updates</string>
    <string name="strName">Name</string>
    <string name="strEmailLbl">E-Mail</string>
    <string name="strCommentsLbl">Thoughts</string>
    <string name="truckID">Truck ID</string>
    <string name="truckPassword">Password</string>
    <string name="leaving">When Will You Be Leaving?</string>
    <string name="placepin">Put me on the map!</string>
    <string name="thanks">Thanks For Logging In!</string>
    <string name="strSubmit">Submit</string>
    <string name="strLocationList">Location List</string>
    <string name="strLocationMap">Location Map</string>
    <string name="strUsername">Username</string>
    <string name="strPassword">Password</string>
    <string name="strUsernameDesc">Enter your CFTA Application Username</string>
    <string name="strPasswordDesc">Enter your CFTA Application Password</string>
    <string name="strUpdateLocation">Update Location</string>
    <string name="strGenericError">An Error Has Occurred</string>
    <string name="title_activity_view_truck">ViewTruckActivity</string>
    <string name="strHours">Hours</string>
    <string name="strCurrentLocationLbl">Current Location</string>
    <string name="strViewMenu">View Truck Menu</string>
    <string name="strRateTruck">Rate</string>
    <string name="strReviewError">An Error Has Occurred! Could Not Post Review At This Time!</string>
    <string name="CFTAN">CFTA Now</string>
    <string name="title_activity_map_test">MapTest</string>
    <string name="strCurrentLocation">Current Location</string>
    <string name="strCurrentTruckPrefName">current_truck_name</string>
    <string name="strPreferencesUsername">username</string>
    <string name="strPreferencesPassword">password</string>
    <string name="strBadUsernameOrPassword">Login Failed! Bad Username or Password!</string>
    <string name="strErrorUpdatingLocation">Error Updating Location!</string>
    <string name="strCannotDrawMaps">Error! Cannot Draw Map! Please check your location settings and try again.</string>
    <string name="strGetDirections">Get Directions</string>
    <string name="strNoTrucksFound">No Trucks Found!\nThere Are No Food Trucks Currently Open!</string>
    <string name="strTruckLeavingTime">Open Until</string>
    <string name="strViewTruckMenu">View Truck Menu</string>
    <string name="strViewTruckReviews">View Reviews</string>
    <string name="title_activity_view_truck_reviews">ViewTruckReviewsActivity</string>
    <string name="strCreateReview">Review This Truck</string>
    <string name="strReviewerName">Name</string>
    <string name="strCouldNotMakeReview">Error! Could Not Make Review!</string>
    <string name="strReviewCreated">Review Created!</string>
    <string name="strGPSNotEnabledError">Error! GPS is Currently Disabled! Please Exit the App, Turn Gps On, and Reopen the App!</string>
    <string name="strGPSDisabledSomeFeaturesAreDisabled">Warning! GPS is Currently Disabled, Not All Features Are Available. Enable GPS To Access All Features</string>
    <string name="title_activity_create_menu_item">CreateMenuItemActivity</string>
    <string name="strCreateNewMenuItem">Create New Menu Item</string>
    <string name="strNewMenuItemTitle">Title</string>
    <string name="strNewMenuItemDescription">Description</string>
    <string name="strNewMenuItemPrice">Price</string>
    <string name="strNewMenuItemPriceHint">&quot;Do not include $ &quot;</string>
    <string name="strErrorAddingMenuItem">Error! Cannot Add Menu Item At This Time!</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="strChangePasswordTitle">Change Password</string>
    <string name="lblCurrentPassword">Current Password</string>
    <string name="lblNewPassword">New Password</string>
    <string name="lblPasswordConfirm">Confirm</string>
    <string name="strViewMap">View Truck Map</string>
    <string name="strTruckList">View Active Trucks</string>
    <string name="strHelp">Help</string>
    <string name="strAbout">About Us</string>
    <string name="strUpdatePassword">Update Password</string>
    <string name="strErrorPasswordsDoNotMatch">Passwords Do Not Match!</string>
    <string name="strErrorPasswordIncorrect">Current Password is Incorrect!</string>
    <string name="strPasswordChanged">Password Changed!</string>
    <string name="strAverageRating">Average Rating</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="StrAndrewSmiley">Andrew Smiley</string>
    <string name="strMattHenrich">Matt Henrich</string>
    <string name="strJoelMercurio">Joel Mercurio</string>
    <string name="strAboutTheApp">About The App</string>
    <string name="srtAboutTheAppDesc">This application was developed as a part of the Mobile Device Programming class at the University of Cincinnati, Fall Semester 2013. Additionally, this application was developed in collaboration with the Cincinnati Food Truck Association. All code is completely open source and can be found at https://code.google.com/p/cincyfoodtruck/ </string>
    <string name="strAboutAndrewSmiley">Lead Developer, Database Management, Web Development</string>
    <string name="strAboutMattHenrich">Project Manager, UI Development</string>
    <string name="strAboutJoelMercurio">Integration Development</string>
    <string name="strAboutTheDevelopers">About The Developers</string>
    <string name="strMenuItemAdded">Item Added!</string>
    <string name="strCurrentItemSearchCriteria">current_item_search_criteria</string>
    <string name="title_activity_menu_item_search">MenuItemSearchActivity</string>
    <string name="strSearchForFoodsHint">Ex: \'Hot Dogs\' or \'Burritos\'</string>
    <string name="strSearch">Search</string>
    <string name="strSearchForFoodslbl">Search For Foods</string>
    <string name="strSearchCriteria">Search Criteria</string>
    <string name="title_activity_menu_item_search_results">MenuItemSearchResultsActivity</string>
    <string name="strDistanceUnavailable">Distance Unavailable</string>
    <string name="strCurrentlyClosed">Currently Closed</string>
    <string name="strUnableToGetDirections">Current Location Unavailable. Unable To Get Directions!</string>
    <string name="strNoItemsFound">No Items Found!</string>
    <string name="strThisTruckHasNoItems">This Truck Has Not Added Any Menu Items!</string>
    <string name="strNoReviews">This Truck Has No Reviews Yet. Would You Like To Write One?</string>
    <string name="title_activity_view_all_trucks">CFTA NOW</string>
    <string name="strViewAllTrucksLbl">View All Trucks</string>
    <string name="strNoReviewsBasic">This Truck Has Not Been Reviewed</string>
    <string name="strCannotViewActiveTrucks">To View Active Trucks, Please Enable GPS and Try Again</string>
    <string name="strAllFieldsRequired">Not All Fields Filled Out!</string>
    <string name="strNavigation">Navigation</string>
    <string name="strTruckDashboard">Truck Dashboard</string>
    <string name="strEnableNavigation">EnableNavigation</string>
    <string name="strEnableNavigationTitle">Enable Navigation Screen</string>
    <string name="strEnableNavigationSummary">When Checked, This Option Brings The Main Menu Page Back</string>
    <string name="lblIMenutemImage">Menu Item Image</string>
    <string name="strChooseNewPhoto">Choose Existing</string>
    <string name="strTakeNewPhoto">Take New</string>
    <string name="strImageLoaded">Image Loaded Successfully</string>
    <string name="strCannotAcquireLocation">Cannot acquire current location! Please check location settings and try again. </string>
     <string name="strNewsFeed">Newsfeed</string>
    <string name="strConnectFacebook">Connect Facebook</string>
    <string name="facebook_app_id">696538993808289</string>
    <string name="facebook_page_name">FACEBOOK_PAGE_NAME</string>
    <string name="facebook_page_access_token">FACEBOOK_PAGE_ACCESS_TOKEN</string>
    <string name="twitter_username">TWITTER_USERNAME</string>
    <!--<string name="facebook_page_access_token">FACEBOOK_PAGE_ACCESS_TOKEN</string>-->
    
</resources>
