<menu xmlns:android="http://schemas.android.com/apk/res/android" >
      	         <item
        android:id="@+id/action_search_for_foods"
        android:orderInCategory="100"
        android:showAsAction="never"
        
        android:title="@string/strSearchForFoodslbl"/>
    	         <item
        android:id="@+id/action_view_all_trucks"
        android:orderInCategory="100"
        android:showAsAction="never"
        
        android:title="@string/strViewAllTrucksLbl"/>  
    
    	  <item
        android:id="@+id/action_truck_list"
        android:orderInCategory="100"
        android:showAsAction="never"
        
        android:title="@string/strTruckList"/>
    	    <item
        android:id="@+id/action_view_map"
        android:orderInCategory="100"
        android:showAsAction="never"
        
        android:title="@string/strViewMap"/>
    	       <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        
        android:title="@string/action_settings"/>
     
    	      <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:showAsAction="never"
        
        android:title="@string/strContact"/>
    	       <item
        android:id="@+id/action_rate_us"
        android:orderInCategory="100"
        android:showAsAction="never"
        
        android:title="@string/strRate"/>
    	      
    	        
    	        <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        
        android:title="@string/strAbout"/>
    	        <item
        android:id="@+id/action_login"
        android:orderInCategory="100"
        android:showAsAction="never"
        
        android:title="@string/strLogin"/>
    	        
    	           <item
        android:id="@+id/action_newsfeed"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/strNewsFeed"/>
        <!--<item-->
            <!--android:id="@+id/action_connect_facebook"-->
            <!--android:orderInCategory="100"-->
            <!--android:showAsAction="never"-->
            <!--android:title="@string/strConnectFacebook"/>-->
    	        
    	
    

</menu>
